--- a/lucrarea_4/CMakeLists.txt
+++ b/lucrarea_4/CMakeLists.txt
@@ -1,18 +1,14 @@
 ﻿# CMake version
 cmake_minimum_required(VERSION 3.16.3)
 
+# Initialize the variable PROJECT NAME
 set(PROJECT_NAME "main")
 
 # Project name
-project(${PROJECT_NAME})  
+project(${PROJECT_NAME} LANGUAGES CXX)  
+
+# Collect all files in one list by regular expression
+file(GLOB CPPS "./src/*.cpp" "./inc/*.hpp")
 
 # Define the executable
-add_executable(${PROJECT_NAME}
-		./src/main.cpp
-		./src/Figure.cpp
-		./src/Circle.cpp
-		./src/Rectangle.cpp
-		./inc/main.hpp
-		./inc/Figure.hpp
-		./inc/Circle.hpp
-		./inc/Rectangle.hpp)
+add_executable(${PROJECT_NAME} ${CPPS})
